Performance improvements with LinkedList